# langelic-archive

./: .gitignore  CHANGELOG.md  NOTICE  README.md  UPDATE_PROCEDURE.md  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: langelic_archive.ex
lib/langelic_archive/: error.ex  native.ex
native/langelic_archive/: Cargo.toml
native/langelic_archive/src/: lib.rs
scripts/: release.exs
test/: langelic_archive_test.exs
test/fixtures/: README.md  encrypted.7z  encrypted.rar  sample.7z  sample.rar
